kubernetes/prometheus-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
  namespace: prometheus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus-kube-prometheus-prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
  namespace: prometheus
  labels:
    app: prometheus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
